@@ -29,7 +29,15 @@
 #define DBG(...)
 #endif
 
-const int STORAGEFILE_CHUNKSIZE = (((FLASH_PAGE_SIZE<4096)?FLASH_PAGE_SIZE:4096) - sizeof(JsfFileHeader)); // use 32 for testing
+const int STORAGEFILE_CHUNKSIZE = 
+#if FLASH_SAVED_CODE_LENGTH < 1000000
+  // for normal devices
+  (((FLASH_PAGE_SIZE<4096)?FLASH_PAGE_SIZE:4096) - sizeof(JsfFileHeader)); // use 32 for testing
+#else
+  // where we have large external flash (eg Bangle.js), choose a chunk size much bigger than the 
+  // page size. This allows us to have less chunks around, and to store much bigger files.
+  (FLASH_PAGE_SIZE*10) - sizeof(JsfFileHeader);
+#endif
 
 /*JSON{
   "type" : "library",
@@ -402,20 +410,23 @@ JsVar *jswrap_storage_open(JsVar *name, JsVar *modeVar) {
   int offset = 0; // offset in file
   JsfFileHeader header;
   uint32_t addr = jsfFindFile(fname, &header);
+  uint32_t fileLen = jsfGetFileSize(&header);
   if (mode=='w') { // write,
     if (addr) { // we had a file - erase it
       jswrap_storagefile_erase(f);
       addr = 0;
+      fileLen = 0;
     }
   }
   if (mode=='a') { // append
-    // Find the last free page
+    // Find the last free page (eg it has 0xFF at the end)
     unsigned char lastCh = 255;
     if (addr) jshFlashRead(&lastCh, addr+jsfGetFileSize(&header)-1, 1);
     while (addr && lastCh!=255 && chunk<255) {
       chunk++;
       fname.c[fnamei]=chunk;
       addr = jsfFindFile(fname, &header);
+      fileLen = jsfGetFileSize(&header);
       if (addr) jshFlashRead(&lastCh, addr+jsfGetFileSize(&header)-1, 1);
     }
     if (addr) {
@@ -423,7 +434,7 @@ JsVar *jswrap_storage_open(JsVar *name, JsVar *modeVar) {
       char buf[64];
       bool foundEnd = false;
       while (!foundEnd) {
-        int l = STORAGEFILE_CHUNKSIZE-offset;
+        int l = fileLen - offset;
         if (l<=0) {
           foundEnd = true;
           break;
@@ -446,10 +457,11 @@ JsVar *jswrap_storage_open(JsVar *name, JsVar *modeVar) {
     // read - do nothing, we're good.
   }
 
-  DBG("Open %j Chunk %d Offset %d addr 0x%08x\n",name,chunk,offset,addr);
+  DBG("Open %j Chunk %d Offset %d addr 0x%08x len %d\n",name,chunk,offset,addr,len);
   jsvObjectSetChildAndUnLock(f,"chunk",jsvNewFromInteger(chunk));
   jsvObjectSetChildAndUnLock(f,"offset",jsvNewFromInteger(offset));
   jsvObjectSetChildAndUnLock(f,"addr",jsvNewFromInteger(addr));
+  jsvObjectSetChildAndUnLock(f,"len",jsvNewFromInteger(fileLen));
   jsvObjectSetChildAndUnLock(f,"mode",jsvNewFromInteger(mode));
 
   return f;
@@ -519,6 +531,7 @@ JsVar *jswrap_storagefile_read_internal(JsVar *f, int len) {
   uint32_t addr = (uint32_t)jsvGetIntegerAndUnLock(jsvObjectGetChild(f,"addr",0));
   if (!addr) return 0; // end of file
   int offset = jsvGetIntegerAndUnLock(jsvObjectGetChild(f,"offset",0));
+  int fileLen = jsvGetIntegerAndUnLock(jsvObjectGetChild(f,"len",0));
   int chunk = jsvGetIntegerAndUnLock(jsvObjectGetChild(f,"chunk",0));
   JsfFileName fname = jsfNameFromVarAndUnLock(jsvObjectGetChild(f,"name",0));
   int fnamei = sizeof(fname)-1;
@@ -529,7 +542,7 @@ JsVar *jswrap_storagefile_read_internal(JsVar *f, int len) {
   char buf[32];
   if (isReadLine) len = sizeof(buf);
   while (len) {
-    int remaining = STORAGEFILE_CHUNKSIZE-offset;
+    int remaining = fileLen - offset;
     if (remaining<=0) { // next page
       offset = 0;
       if (chunk==255) {
@@ -539,11 +552,13 @@ JsVar *jswrap_storagefile_read_internal(JsVar *f, int len) {
         fname.c[fnamei]=chunk;
         JsfFileHeader header;
         addr = jsfFindFile(fname, &header);
+        fileLen = jsfGetFileSize(&header);
+        jsvObjectSetChildAndUnLock(f,"len",jsvNewFromInteger(fileLen));
       }
       jsvObjectSetChildAndUnLock(f,"addr",jsvNewFromInteger(addr));
       jsvObjectSetChildAndUnLock(f,"offset",jsvNewFromInteger(offset));
       jsvObjectSetChildAndUnLock(f,"chunk",jsvNewFromInteger(chunk));
-      remaining = STORAGEFILE_CHUNKSIZE;
+      remaining = fileLen;
       if (!addr) {
         // end of file!
         return result;
@@ -660,7 +675,7 @@ int jswrap_storagefile_getLength(JsVar *f) {
     char buf[64];
     bool foundEnd = false;
     while (!foundEnd) {
-      int l = STORAGEFILE_CHUNKSIZE-offset;
+      int l = jsfGetFileSize(&header) - offset;
       if (l<=0) {
         foundEnd = true;
         break;
@@ -707,6 +722,7 @@ void jswrap_storagefile_write(JsVar *f, JsVar *_data) {
   size_t len = jsvGetStringLength(data);
   if (len==0) return;
   int offset = jsvGetIntegerAndUnLock(jsvObjectGetChild(f,"offset",0));
+  int fileLen = jsvGetIntegerAndUnLock(jsvObjectGetChild(f,"len",0));
   int chunk = jsvGetIntegerAndUnLock(jsvObjectGetChild(f,"chunk",0));
   JsfFileName fname = jsfNameFromVarAndUnLock(jsvObjectGetChild(f,"name",0));
   int fnamei = sizeof(fname)-1;
@@ -715,14 +731,16 @@ void jswrap_storagefile_write(JsVar *f, JsVar *_data) {
   fname.c[fnamei]=chunk;
   uint32_t addr = (uint32_t)jsvGetIntegerAndUnLock(jsvObjectGetChild(f,"addr",0));
   DBG("Write Chunk %d Offset %d addr 0x%08x\n",chunk,offset,addr);
-  int remaining = STORAGEFILE_CHUNKSIZE - offset;
+  int remaining = fileLen - offset;
   if (!addr) {
     DBG("Write Create Chunk\n");
     if (jsfWriteFile(fname, data, JSFF_STORAGEFILE, 0, STORAGEFILE_CHUNKSIZE)) {
       JsfFileHeader header;
       addr = jsfFindFile(fname, &header);
+      fileLen = jsfGetFileSize(&header);
       offset = len;
       jsvObjectSetChildAndUnLock(f,"offset",jsvNewFromInteger(offset));
+      jsvObjectSetChildAndUnLock(f,"len",jsvNewFromInteger(fileLen));
       jsvObjectSetChildAndUnLock(f,"addr",jsvNewFromInteger(addr));
     } else {
       // there would already have been an exception
@@ -758,8 +776,10 @@ void jswrap_storagefile_write(JsVar *f, JsVar *_data) {
     if (jsfWriteFile(fname, part, JSFF_STORAGEFILE, 0, STORAGEFILE_CHUNKSIZE)) {
       JsfFileHeader header;
       addr = jsfFindFile(fname, &header);
+      fileLen = jsfGetFileSize(&header);
       offset = len;
       jsvObjectSetChildAndUnLock(f,"offset",jsvNewFromInteger(offset));
+      jsvObjectSetChildAndUnLock(f,"len",jsvNewFromInteger(fileLen));
       jsvObjectSetChildAndUnLock(f,"addr",jsvNewFromInteger(addr));
     } else {
       jsvUnLock(data);
